c++ for robotics ch3 완료

--- a/cpp_for_robotics/catkin_ws/src/cpp_course_repo/c_scripts/CMakeLists.txt
+++ b/cpp_for_robotics/catkin_ws/src/cpp_course_repo/c_scripts/CMakeLists.txt
@@ -65,6 +65,11 @@ add_executable(${csname} src/${csname}.cpp)
 add_dependencies(${csname} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${csname} ${catkin_LIBRARIES})
 
+set(csname unit3_exercise2)
+add_executable(${csname} src/${csname}.cpp)
+add_dependencies(${csname} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(${csname} ${catkin_LIBRARIES})
+
 set(csname unit4_exercise)
 add_executable(${csname} src/${csname}.cpp)
 add_dependencies(${csname} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
